redimencionamento da tela do usuário

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Mata Mosquito</title>
+    <script src="jogo-js.js"></script>
     <script>
         
     </script>
 </head>
-<body>
+<body onresize="ajustaTamanhoPalcoJogo()">
     
 </body>
 </html>
