--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body onresize="ajustaTamanhoPalcoJogo()">
     <div class="painel">
         <div class="vida">
-            <img src="imagens/coracao_vazio.png" alt="Coração vazio">
-            <img src="imagens/coracao_cheio.png" alt="Coração cheio">
-            <img src="imagens/coracao_cheio.png" alt="Coração cheio">
+            <img src="imagens/coracao_cheio.png" alt="Coração vazio" id="v1">
+            <img src="imagens/coracao_cheio.png" alt="Coração cheio" id="v2">
+            <img src="imagens/coracao_cheio.png" alt="Coração cheio" id="v3">
         </div>
 
         <div class="cronometro">
