lógica da dificuldade do jogo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
             posicaoRandomica() 
 
-        }, 1000)
+        }, criaMosquitoTempo) //tempo declarado na variável
     </script>
 </body>
 </html>
